third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/string/multiline-bad-escape-1.stderr
TOML parse error at line 1, column 11
  |
1 | k = """t\a"""
  |           ^
invalid escape sequence
expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
